# rusty-tax-break

./: Cargo.toml  LICENSE  README  build-release.sh
src/: application_window.rs  channel.rs  choose_folder_button.rs  choose_output_folder_button.rs  choose_repository_folder_button.rs  commit_author_filter_entry.rs  commit_diff.rs  commit_diff_view.rs  commit_log.rs  commit_log_column.rs  commit_log_model.rs  commit_log_model_filter.rs  commit_log_view.rs  config_path.rs  config_store.rs  date_time.rs  diff_colorizer.rs  diff_formatter.rs  dispatcher.rs  event.rs  event_handling.rs  generate_report_button.rs  gui.rs  gui_element_provider.rs  lib.rs  line_number.rs  main.rs  main_window.glade  month_filter_combo_box.rs  open_options_button.rs  options_dialog.glade  options_dialog.rs  output_path_label.rs  output_path_store.rs  pane_with_commit_log_and_diff.rs  report_generator.rs  repository.rs  repository_path_label.rs  repository_store.rs  source.rs  (+4 more)
tests/: integration_tests.rs
tests/choose_output_folder/: cancel_choosing_output_folder.rs  choose_output_folder.rs  close_choosing_output_folder.rs  mod.rs
tests/choose_repository/: cancel_choosing_repository.rs  choose_empty_repository.rs  choose_filled_repository.rs  close_choosing_repository.rs  mod.rs
tests/common/: date_time.rs  event_processing.rs  gui_access.rs  gui_assertions.rs  gui_interactions.rs  mod.rs  repository_setup.rs  test_gui.rs  test_resources.rs  test_setup.rs
