[package]
name = "rusty-tax-break"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2021"

[dependencies]
dirs = { version = "4.0.0", default-features = false }
git2 = { version = "0.15.0", default-features = false }
gtk = { version = "0.16.2", default-features = false }
sanitize-filename = {version = "0.4.0", default-features = false }
serde = { version ="1.0.151", default-features = false, features = ["derive"] }
time = { version = "0.3.17", default-features = false, features = ["formatting", "macros"] }
to_trait = { version = "0.1.1", default-features = false }
toml = { version = "0.5.10", default-features = false }
tz-rs = { version = "0.6.14", default-features = false, features = ["const", "std"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
color-backtrace = { version = "0.5.1", default-features = false }
gtk-test = {version = "0.16.0", default-features = false }
rusty-fork = { version = "0.3.0", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
termcolor = { version = "1.1.3", default-features = false }
time = { version = "0.3.17", default-features = false, features = ["formatting", "macros", "parsing"] }

[profile.release]
codegen-units = 1
lto = "fat"
