[package]
name = "rusty-tax-break"
version = "0.1.0"
authors = ["Arkadiusz Piekarz <piekarzarkadiusz@gmail.com>"]
edition = "2021"

[dependencies]
dirs = { version = "5.0.1", default-features = false }
git2 = { version = "0.18.3", default-features = false }
gtk = { version = "0.18.1", default-features = false }
sanitize-filename = {version = "0.5.0", default-features = false }
serde = { version ="1.0.198", default-features = false, features = ["derive"] }
time = { version = "0.3.36", default-features = false, features = ["formatting", "macros"] }
to_trait = { version = "0.1.1", default-features = false }
toml = { version = "0.8.12", default-features = false, features = ["display", "parse"] }
tz-rs = { version = "0.6.14", default-features = false, features = ["const", "std"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
color-backtrace = { version = "0.6.1", default-features = false }
gtk-test = {version = "0.18.0", default-features = false }
rusty-fork = { version = "0.3.0", default-features = false }
tempfile = { version = "3.10.1", default-features = false }
termcolor = { version = "1.4.1", default-features = false }
time = { version = "0.3.36", default-features = false, features = ["formatting", "macros", "parsing"] }

[profile.release]
codegen-units = 1
lto = "fat"
